# gmt-fem-transfer-functions

./: .gitignore  Cargo.toml  README.md  build.rs  test.pkl
src/: cli.rs  data.rs  frequency_response.rs  lib.rs  lom.lz4  main.rs  static_gain.rs  structural.rs
