[package]
name = "gmt-fem-frequency-response"
version = "0.1.0"
authors = [
  "Rod Conan <rconan@gmto.org>",
  "Rodrigo Romano <rromano@gmto.org>",
  "Christoph Dribusch <cdribusch@gmto.org>",
]
edition = "2024"
default-run = "gmt-fem-frequency-response"
license = "MIT OR Apache-2.0"
description = "GMT FEM Transfer Functions CLI"
readme = "README.md"
repository = "https://github.com/rconan/gmt-fem-transfer-functions"


[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
faer = { version = "0.23.2", features = [
  "serde",
  "npy",
  "perf-warn",
], optional = true }
gmt-fem = "5.2.1"
gmt-lom = { version = "2.6.2", optional = true }
gmt_dos-clients_fem = "5.2.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
lz4_flex = "0.12.0"
matio-rs = { version = "1.6.2" }
nalgebra = { version = "0.33.2", features = [
  "rayon",
  "serde",
  "serde-serialize",
], optional = true }
num-complex = { version = "0.4.6", features = ["serde"] }
rayon = "1.11.0"
reborrow = "0.5.5"
serde = { version = "1.0.228", features = ["derive"] }
serde-pickle = "1.2.0"
thiserror = "2.0.17"

[build-dependencies]
gmt-fem-code-builder = "2.3.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fem)'] }

[[bin]]
name = "gmt-fem-frequency-response"
path = "src/main.rs"

[[bin]]
name = "lom"
path = "src/bin/lom.rs"
required-features = ["gmt-lom"]

[features]
# default = ["nalgebra"]
gmt-lom = ["dep:gmt-lom"]
faer = ["dep:faer", "matio-rs/faer"]
nalgebra = ["dep:nalgebra", "matio-rs/nalgebra"]

[profile.release]
lto = "fat"
codegen-units = 1
